5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4379/executions/1649_2446.log
== SUBMITION (2019-04-15 23:27:34) 
-- CODE:
num=int(input("senha (6 digitos): "))
n1=num//100000
n2=(num//10000)
n3=(num//1000)%10
n4=(num//100)%10
n5=(num//10)%10
n6=num%10
ifn((n2+n4+n6)%(n1+n3+n5)==0):
	print("acesso liberado")
else:
	print("senha invalida")

-- EXECUTION TIME:
0.27046
-- ERROR:
  File "/home/codebench/codes/1649/2446/main.py", line 8
    ifn((n2+n4+n6)%(n1+n3+n5)==0):
                                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:27:35) 
-- CODE:
num=int(input("senha (6 digitos): "))
n1=num//100000
n2=(num//10000)
n3=(num//1000)%10
n4=(num//100)%10
n5=(num//10)%10
n6=num%10
ifn((n2+n4+n6)%(n1+n3+n5)==0):
	print("acesso liberado")
else:
	print("senha invalida")

-- ERROR:
File "XXXX", line 8
    ifn((n2+n4+n6)%(n1+n3+n5)==0):
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:27:37) 
-- CODE:
num=int(input("senha (6 digitos): "))
n1=num//100000
n2=(num//10000)
n3=(num//1000)%10
n4=(num//100)%10
n5=(num//10)%10
n6=num%10
ifn((n2+n4+n6)%(n1+n3+n5)==0):
	print("acesso liberado")
else:
	print("senha invalida")

-- ERROR:
File "XXXX", line 8
    ifn((n2+n4+n6)%(n1+n3+n5)==0):
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:27:59) 
-- CODE:
num=int(input("senha (6 digitos): "))
n1=num//100000
n2=(num//10000)
n3=(num//1000)%10
n4=(num//100)%10
n5=(num//10)%10
n6=num%10
ifn ((n2+n4+n6)%(n1+n3+n5)==0):
	print("acesso liberado")
else:
	print("senha invalida")

-- EXECUTION TIME:
0.158398
-- ERROR:
  File "/home/codebench/codes/1649/2446/main.py", line 8
    ifn ((n2+n4+n6)%(n1+n3+n5)==0):
                                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:27:59) 
-- CODE:
num=int(input("senha (6 digitos): "))
n1=num//100000
n2=(num//10000)
n3=(num//1000)%10
n4=(num//100)%10
n5=(num//10)%10
n6=num%10
ifn ((n2+n4+n6)%(n1+n3+n5)==0):
	print("acesso liberado")
else:
	print("senha invalida")

-- ERROR:
File "XXXX", line 8
    ifn ((n2+n4+n6)%(n1+n3+n5)==0):
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:28:07) 
-- CODE:
num=int(input("senha (6 digitos): "))
n1=num//100000
n2=(num//10000)
n3=(num//1000)%10
n4=(num//100)%10
n5=(num//10)%10
n6=num%10
if ((n2+n4+n6)%(n1+n3+n5)==0):
	print("acesso liberado")
else:
	print("senha invalida")

-- EXECUTION TIME:
0.199123
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
senha invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:28:07) 
-- CODE:
num=int(input("senha (6 digitos): "))
n1=num//100000
n2=(num//10000)
n3=(num//1000)%10
n4=(num//100)%10
n5=(num//10)%10
n6=num%10
if ((n2+n4+n6)%(n1+n3+n5)==0):
	print("acesso liberado")
else:
	print("senha invalida")

-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:28:37) 
-- CODE:
num=int(input("senha (6 digitos): "))
n1=num//100000
n2=(num//10000)
n3=(num//1000)%10
n4=(num//100)%10
n5=(num//10)%10
n6=num%10
if ((n2+n4+n6)%(n1+n3+n5)==0):
	print("acesso liberado")
else:
	print("senha invalida")

-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:28:38) 
-- CODE:
num=int(input("senha (6 digitos): "))
n1=num//100000
n2=(num//10000)
n3=(num//1000)%10
n4=(num//100)%10
n5=(num//10)%10
n6=num%10
if ((n2+n4+n6)%(n1+n3+n5)==0):
	print("acesso liberado")
else:
	print("senha invalida")

-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:28:53) 
-- CODE:
num=int(input("senha (6 digitos): "))
n1=num//100000
n2=(num//10000)
n3=(num//1000)%10
n4=(num//100)%10
n5=(num//10)%10
n6=num%10
if ((n2+n4+n6)%(n1+n3+n5)==0):
	print("acesso liberado")
else:
	print("senha invalida")

-- EXECUTION TIME:
0.208377
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
senha invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:29:03) 
-- CODE:
num=int(input("senha (6 digitos): "))
n1=num//100000
n2=(num//10000)
n3=(num//1000)%10
n4=(num//100)%10
n5=(num//10)%10
n6=num%10
if ((n2+n4+n6)%(n1+n3+n5)==0):
	print("acesso liberado")
else:
	print("senha invalida")

-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:29:47) 
-- CODE:
num=int(input("senha (6 digitos): "))
n1=num//100000
n2=(num//10000)
n3=(num//1000)%10
n4=(num//100)%10
n5=(num//10)%10
n6=num%10
if ((n2+n4+n6)%(n1+n3+n5)==0):
	print("acesso liberado")
else:
	print("senha invalida")

-- EXECUTION TIME:
0.178276
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
senha invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:30:13) 
-- CODE:
num=int(input("senha (6 digitos): "))
n1=num//100000
n2=(num//10000)
n3=(num//1000)%10
n4=(num//100)%10
n5=(num//10)%10
n6=num%10
if ((n2+n4+n6)%(n1+n3+n5)==0):
	print("acesso liberado")
else:
	print("senha invalida")

-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:30:15) 
-- CODE:
num=int(input("senha (6 digitos): "))
n1=num//100000
n2=(num//10000)
n3=(num//1000)%10
n4=(num//100)%10
n5=(num//10)%10
n6=num%10
if ((n2+n4+n6)%(n1+n3+n5)==0):
	print("acesso liberado")
else:
	print("senha invalida")

-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:30:16) 
-- CODE:
num=int(input("senha (6 digitos): "))
n1=num//100000
n2=(num//10000)
n3=(num//1000)%10
n4=(num//100)%10
n5=(num//10)%10
n6=num%10
if ((n2+n4+n6)%(n1+n3+n5)==0):
	print("acesso liberado")
else:
	print("senha invalida")

-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:31:06) 
-- CODE:
num=int(input("senha (6 digitos): "))
n1=num//100000
n2=(num//10000)
n3=(num//1000)%10
n4=(num//100)%10
n5=(num//10)%10
n6=num%10
if ((n2+n4+n6)%(n1+n3+n5)==0):
	print("acesso liberado")
else:
	print("senha invalida")

-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:31:36) 
-- CODE:
num=int(input("senha (6 digitos): "))
n1=num//100000
n2=(num//10000)
n3=(num//1000)%10
n4=(num//100)%10
n5=(num//10)%10
n6=num%10
if ((n2+n4+n6)%(n1+n3+n5)==0):
	print("acesso liberado")
else:
	print("senha invalida")

-- EXECUTION TIME:
0.135667
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
senha invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:31:47) 
-- CODE:
num=int(input("senha (6 digitos): "))
n1=num//100000
n2=(num//10000)
n3=(num//1000)%10
n4=(num//100)%10
n5=(num//10)%10
n6=num%10
if ((n2+n4+n6)%(n1+n3+n5)==0):
	print("acesso liberado")
else:
	print("senha invalida")

-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:31:48) 
-- CODE:
num=int(input("senha (6 digitos): "))
n1=num//100000
n2=(num//10000)
n3=(num//1000)%10
n4=(num//100)%10
n5=(num//10)%10
n6=num%10
if ((n2+n4+n6)%(n1+n3+n5)==0):
	print("acesso liberado")
else:
	print("senha invalida")

-- EXECUTION TIME:
0.130499
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
senha invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:31:55) 
-- CODE:
num=int(input("senha (6 digitos): "))
n1=num//100000
n2=(num//10000)
n3=(num//1000)%10
n4=(num//100)%10
n5=(num//10)%10
n6=num%10
if ((n2+n4+n6)%(n1+n3+n5)==0):
	print("acesso liberado")
else:
	print("senha invalida")

-- EXECUTION TIME:
0.158248
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
senha invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:31:55) 
-- CODE:
num=int(input("senha (6 digitos): "))
n1=num//100000
n2=(num//10000)
n3=(num//1000)%10
n4=(num//100)%10
n5=(num//10)%10
n6=num%10
if ((n2+n4+n6)%(n1+n3+n5)==0):
	print("acesso liberado")
else:
	print("senha invalida")

-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:31:55) 
-- CODE:
num=int(input("senha (6 digitos): "))
n1=num//100000
n2=(num//10000)
n3=(num//1000)%10
n4=(num//100)%10
n5=(num//10)%10
n6=num%10
if ((n2+n4+n6)%(n1+n3+n5)==0):
	print("acesso liberado")
else:
	print("senha invalida")

-- EXECUTION TIME:
0.124654
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha (6 digitos): senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
senha (6 digitos): senha invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:32:26) 
-- CODE:
num=int(input("senha (6 digitos): "))
n1=num//100000
n2=(num//10000)
n3=(num//1000)%10
n4=(num//100)%10
n5=(num//10)%10
n6=num%10
if ((n2+n4+n6)%(n1+n3+n5)==0):
	print("acesso liberado")
else:
	print("senha invalida")

-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:34:20) 
-- CODE:
num=int(input("senha (6 digitos): "))
n1=num//100000
n2=(num//10000)
n3=(num//1000)%10
n4=(num//100)%10
n5=(num//10)%10
n6=num%10
if ((n2+n4+n6)%(n1+n3+n5)==0):
	print("acesso liberado")
else:
	print("senha invalida")

-- EXECUTION TIME:
0.188924
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
acesso liberado
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
senha invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:34:20) 
-- CODE:
num=int(input("senha (6 digitos): "))
n1=num//100000
n2=(num//10000)
n3=(num//1000)%10
n4=(num//100)%10
n5=(num//10)%10
n6=num%10
if ((n2+n4+n6)%(n1+n3+n5)==0):
	print("acesso liberado")
else:
	print("senha invalida")

-- EXECUTION TIME:
0.300749
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
acesso liberado
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
senha invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:34:21) 
-- CODE:
num=int(input("senha (6 digitos): "))
n1=num//100000
n2=(num//10000)
n3=(num//1000)%10
n4=(num//100)%10
n5=(num//10)%10
n6=num%10
if ((n2+n4+n6)%(n1+n3+n5)==0):
	print("acesso liberado")
else:
	print("senha invalida")

-- EXECUTION TIME:
0.239858
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
senha invalida
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:34:21) 
-- CODE:
num=int(input("senha (6 digitos): "))
n1=num//100000
n2=(num//10000)
n3=(num//1000)%10
n4=(num//100)%10
n5=(num//10)%10
n6=num%10
if ((n2+n4+n6)%(n1+n3+n5)==0):
	print("acesso liberado")
else:
	print("senha invalida")

-- EXECUTION TIME:
0.308492
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1649/2446/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:34:21) 
-- CODE:
num=int(input("senha (6 digitos): "))
n1=num//100000
n2=(num//10000)
n3=(num//1000)%10
n4=(num//100)%10
n5=(num//10)%10
n6=num%10
if ((n2+n4+n6)%(n1+n3+n5)==0):
	print("acesso liberado")
else:
	print("senha invalida")

-- EXECUTION TIME:
0.248074
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1649/2446/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:35:07) 
-- CODE:
num=int(input("senha (6 digitos): "))
n1=num//100000
n2=(num//10000)
n3=(num//1000)%10
n4=(num//100)%10
n5=(num//10)%10
n6=num%10
if ((n2+n4+n6)%(n1+n3+n5)==0):
	print("acesso liberado")
else:
	print("senha invalida")

-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:38:02) 
-- CODE:
num=int(input("senha (6 digitos): "))
n1=num//100000
n2=(num//10000)
n3=(num//1000)%10
n4=(num//100)%10
n5=(num//10)%10
n6=num%10
if ((n2+n4+n6)%(n1+n3+n5)==0):
	print("acesso liberado")
else:
	print("senha invalida")

-- EXECUTION TIME:
0.306385
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
acesso liberado
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:38:02) 
-- CODE:
num=int(input("senha (6 digitos): "))
n1=num//100000
n2=(num//10000)
n3=(num//1000)%10
n4=(num//100)%10
n5=(num//10)%10
n6=num%10
if ((n2+n4+n6)%(n1+n3+n5)==0):
	print("acesso liberado")
else:
	print("senha invalida")

-- EXECUTION TIME:
0.400446
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
senha invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:38:02) 
-- CODE:
num=int(input("senha (6 digitos): "))
n1=num//100000
n2=(num//10000)
n3=(num//1000)%10
n4=(num//100)%10
n5=(num//10)%10
n6=num%10
if ((n2+n4+n6)%(n1+n3+n5)==0):
	print("acesso liberado")
else:
	print("senha invalida")

-- EXECUTION TIME:
0.443541
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
senha invalida
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:38:02) 
-- CODE:
num=int(input("senha (6 digitos): "))
n1=num//100000
n2=(num//10000)
n3=(num//1000)%10
n4=(num//100)%10
n5=(num//10)%10
n6=num%10
if ((n2+n4+n6)%(n1+n3+n5)==0):
	print("acesso liberado")
else:
	print("senha invalida")

-- EXECUTION TIME:
0.414891
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
senha invalida
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:38:03) 
-- CODE:
num=int(input("senha (6 digitos): "))
n1=num//100000
n2=(num//10000)
n3=(num//1000)%10
n4=(num//100)%10
n5=(num//10)%10
n6=num%10
if ((n2+n4+n6)%(n1+n3+n5)==0):
	print("acesso liberado")
else:
	print("senha invalida")

-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:38:03) 
-- CODE:
num=int(input("senha (6 digitos): "))
n1=num//100000
n2=(num//10000)
n3=(num//1000)%10
n4=(num//100)%10
n5=(num//10)%10
n6=num%10
if ((n2+n4+n6)%(n1+n3+n5)==0):
	print("acesso liberado")
else:
	print("senha invalida")

-- EXECUTION TIME:
0.52545
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
senha invalida
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:

-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:38:03) 
-- CODE:
num=int(input("senha (6 digitos): "))
n1=num//100000
n2=(num//10000)
n3=(num//1000)%10
n4=(num//100)%10
n5=(num//10)%10
n6=num%10
if ((n2+n4+n6)%(n1+n3+n5)==0):
	print("acesso liberado")
else:
	print("senha invalida")

-- EXECUTION TIME:
0.580187
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
senha invalida
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:

-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
senha (6 digitos): senha invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:38:03) 
-- CODE:
num=int(input("senha (6 digitos): "))
n1=num//100000
n2=(num//10000)
n3=(num//1000)%10
n4=(num//100)%10
n5=(num//10)%10
n6=num%10
if ((n2+n4+n6)%(n1+n3+n5)==0):
	print("acesso liberado")
else:
	print("senha invalida")

-- EXECUTION TIME:
0.520555
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1649/2446/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:38:03) 
-- CODE:
num=int(input("senha (6 digitos): "))
n1=num//100000
n2=(num//10000)
n3=(num//1000)%10
n4=(num//100)%10
n5=(num//10)%10
n6=num%10
if ((n2+n4+n6)%(n1+n3+n5)==0):
	print("acesso liberado")
else:
	print("senha invalida")

-- EXECUTION TIME:
0.591187
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
senha (6 digitos): senha invalida
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha (6 digitos): senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:38:21) 
-- CODE:
num=int(input("senha (6 digitos): "))
n1=num//100000
n2=(num//10000)
n3=(num//1000)%10
n4=(num//100)%10
n5=(num//10)%10
n6=num%10
if ((n2+n4+n6)%(n1+n3+n5)==0):
	print("acesso liberado")
else:
	print("senha invalida")

-- EXECUTION TIME:
0.161491
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
senha invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:38:28) 
-- CODE:
num=int(input("senha (6 digitos): "))
n1=num//100000
n2=(num//10000)
n3=(num//1000)%10
n4=(num//100)%10
n5=(num//10)%10
n6=num%10
if ((n2+n4+n6)%(n1+n3+n5)==0):
	print("acesso liberado")
else:
	print("senha invalida")

-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:38:40) 
-- CODE:
num=int(input("senha (6 digitos): "))
n1=num//100000
n2=(num//10000)
n3=(num//1000)%10
n4=(num//100)%10
n5=(num//10)%10
n6=num%10
if ((n2+n4+n6)%(n1+n3+n5)==0):
	print("acesso liberado")
else:
	print("senha invalida")

-- EXECUTION TIME:
0.225986
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
senha invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:38:46) 
-- CODE:
num=int(input("senha (6 digitos): "))
n1=num//100000
n2=(num//10000)
n3=(num//1000)%10
n4=(num//100)%10
n5=(num//10)%10
n6=num%10
if ((n2+n4+n6)%(n1+n3+n5)==0):
	print("acesso liberado")
else:
	print("senha invalida")

-- EXECUTION TIME:
0.208861
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
senha invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:38:47) 
-- CODE:
num=int(input("senha (6 digitos): "))
n1=num//100000
n2=(num//10000)
n3=(num//1000)%10
n4=(num//100)%10
n5=(num//10)%10
n6=num%10
if ((n2+n4+n6)%(n1+n3+n5)==0):
	print("acesso liberado")
else:
	print("senha invalida")

-- EXECUTION TIME:
0.125256
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
senha invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:38:47) 
-- CODE:
num=int(input("senha (6 digitos): "))
n1=num//100000
n2=(num//10000)
n3=(num//1000)%10
n4=(num//100)%10
n5=(num//10)%10
n6=num%10
if ((n2+n4+n6)%(n1+n3+n5)==0):
	print("acesso liberado")
else:
	print("senha invalida")

-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:38:48) 
-- CODE:
num=int(input("senha (6 digitos): "))
n1=num//100000
n2=(num//10000)
n3=(num//1000)%10
n4=(num//100)%10
n5=(num//10)%10
n6=num%10
if ((n2+n4+n6)%(n1+n3+n5)==0):
	print("acesso liberado")
else:
	print("senha invalida")

-- EXECUTION TIME:
0.156036
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
senha invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 12:47:32) 
-- CODE:
num=int(input("senha (6 digitos): "))
n1=num//100000
n2=(num//10000)
n3=(num//1000)%10
n4=(num//100)%10
n5=(num//10)%10
n6=num%10
if ((n2+n4+n6)%(n1+n3+n5)==0):
	print("acesso liberado")
else:
	print("senha invalida")

-- EXECUTION TIME:
0.148876
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
senha invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 12:47:33) 
-- CODE:
num=int(input("senha (6 digitos): "))
n1=num//100000
n2=(num//10000)
n3=(num//1000)%10
n4=(num//100)%10
n5=(num//10)%10
n6=num%10
if ((n2+n4+n6)%(n1+n3+n5)==0):
	print("acesso liberado")
else:
	print("senha invalida")

-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 12:49:02) 
-- CODE:
num=int(input("senha (6 digitos): "))
n1=num//100000
n2=(num//10000)
n3=(num//1000)%10
n4=(num//100)%10
n5=(num//10)%10
n6=num%10
if ((n2+n4+n6)%(n1+n3+n5)==0):
	print("acesso liberado")
else:
	print("senha invalida")

-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 12:49:25) 
-- CODE:
num=int(input("senha (6 digitos): "))
n1=num//100000
n2=(num//10000)
n3=(num//1000)%10
n4=(num//100)%10
n5=(num//10)%10
n6=num%10
if ((n2+n4+n6)%(n1+n3+n5)==0):
	print("acesso liberado")
else:
	print("senha invalida")

-- EXECUTION TIME:
0.135987
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
senha invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 12:49:26) 
-- CODE:
num=int(input("senha (6 digitos): "))
n1=num//100000
n2=(num//10000)
n3=(num//1000)%10
n4=(num//100)%10
n5=(num//10)%10
n6=num%10
if ((n2+n4+n6)%(n1+n3+n5)==0):
	print("acesso liberado")
else:
	print("senha invalida")

-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 12:54:02) 
-- CODE:
num=float(input("senha (6 digitos): "))

n1=num//100000
n2=(num//10000)
n3=(num//1000)%10
n4=(num//100)%10
n5=(num//10)%10
n6=num%10

if ((n2+n4+n6)%(n1+n3+n5)==0):
	print("acesso liberado")
else:
	print("senha invalida")

-- EXECUTION TIME:
0.211283
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
senha invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 12:55:56) 
-- CODE:
num=float(input("senha (6 digitos): "))

n1=num//100000
n2=(num//10000)%10
n3=(num//1000)%10
n4=(num//100)%10
n5=(num//10)%10
n6=num%10

if ((n2+n4+n6)%(n1+n3+n5)==0):
	print("acesso liberado")
else:
	print("senha invalida")

-- EXECUTION TIME:
0.282243
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
senha (6 digitos): acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha (6 digitos): senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
senha (6 digitos): acesso liberado
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 12:55:56) 
-- CODE:
num=float(input("senha (6 digitos): "))

n1=num//100000
n2=(num//10000)%10
n3=(num//1000)%10
n4=(num//100)%10
n5=(num//10)%10
n6=num%10

if ((n2+n4+n6)%(n1+n3+n5)==0):
	print("acesso liberado")
else:
	print("senha invalida")

-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 12:55:56) 
-- CODE:
num=float(input("senha (6 digitos): "))

n1=num//100000
n2=(num//10000)%10
n3=(num//1000)%10
n4=(num//100)%10
n5=(num//10)%10
n6=num%10

if ((n2+n4+n6)%(n1+n3+n5)==0):
	print("acesso liberado")
else:
	print("senha invalida")

-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 12:56:01) 
-- CODE:
num=float(input("senha (6 digitos): "))

n1=num//100000
n2=(num//10000)%10
n3=(num//1000)%10
n4=(num//100)%10
n5=(num//10)%10
n6=num%10

if ((n2+n4+n6)%(n1+n3+n5)==0):
	print("acesso liberado")
else:
	print("senha invalida")

-- EXECUTION TIME:
0.161165
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
